# FRTE_1_1

./: .gitignore  README.md  run_validate_11.sh
lib/: libopencv_features2d.so.4.13.0  libopencv_flann.so.4.13.0  libopencv_ml.so.4.13.0  libopencv_objdetect.so.4.13.0  libopencv_photo.so.4.13.0  libopencv_stitching.so.4.13.0  libopencv_video.so.4.13.0
scripts/: demo_compile.sh
src/include/: frvt11.h
src/lib/opencv2/: libopencv_calib3d.so.4.13.0  libopencv_highgui.so.4.13.0  libopencv_videoio.so.4.13.0
src/nullImpl/: ArcFace.cpp  ArcFace.h  CMakeLists.txt  RetinaFace.cpp  RetinaFace.h  RetinaFace_1.h  main.cpp  nullimplfrvt11.cpp  nullimplfrvt11.h
